fix: photo not visible on screens < 400px height

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -52,6 +52,17 @@ h1 {
   font-weight: bold;
   text-align: center;
 }
+h2 {
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+}
+a {
+  color: $text-white;
+}
+a:visited {
+  color: $text-gray;
+}
 
 
 .navigation-menu {
@@ -191,6 +202,7 @@ h1 {
   max-height: 100vh;
   overflow: hidden;
   position: relative;
+  border-bottom: 1px solid #454E54;
 
   .planeWaveContainer {
     #planeWave {
@@ -234,5 +246,27 @@ h1 {
         padding: 15px 50px;
       }
     }
+
+    // fix: there is not enough space for the photo on devices less tall than 400px
+    @media (max-height: 400px) {
+      .photo-container {
+        display: none;
+      }
+    }
+  }
+}
+
+.section2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 200px 20px;
+
+  h2, p {
+    text-align: center;
+  }
+
+  .carousel-container {
+
   }
 }
